style.css
/* ... */
.name {
    display: flex;
    flex-direction: column-reverse;
    background: linear-gradient(0turn, #000000d2 0%, #00000037 30%, #00000000 60%)}

.name .s {
    color: var(--white);
    font-size: 42px;
    font-family: "space-mono", monospace;
    font-weight: 700;
    font-style: normal;
    line-height: 45px;
}

.quote {
    color: var(--black);
    flex-direction: column;
    background: linear-gradient(0.25turn, var(--yellow) 0%, #ffff8d9a 100%);
    display: none}

.quote > h1 {font-size: 28px !important;}

.student:hover .quote {display: flex;}
.student:hover .name {display: none;}

.student:hover {
    transform: scale(1.05);
    transition: 100ms ease-in-out;
    box-shadow: 0px 0px 50px var(--yellow);
}

.topnav {
    z-index: 9999;
    align-self: flex-start;
    width: 100%;
	padding: 15px 30px;
    position: fixed;
    background: linear-gradient(0.5turn, #121212 0%, #121212c7 20%, #1212127a 40%, #1212124a 60%, #12121222 75%, #1212120a 90%, #12121200 100%)
}

.topnav h1 {
    color: #ffffff78;
    text-align: center;
    padding: 14px 16px;
    text-decoration: none;
    font-size: 16px;
}

.animate{
    transition: 100ms ease-in-out;
    -webkit-transition: 100ms ease-in-out;
    -moz-transition: 100ms ease-in-out;
}

.topnav a h1:hover {color: var(--yellow)}
.topnav a h1.active {color: var(--white);}


#logo {
    color: var(--white);
    opacity: 0;
}

.hero-grid:hover #logo {
    opacity: .5;
}

.student-banner-name {font-size: 50px;}
.student-banner-symbol {font-size: 50px; color: var(--yellow);}

.footer {
    display: flex;
    flex-direction: row;
    width: 100%;
    padding-top: 20px;
    padding-bottom: 20px;
    background: #000
}

.footer-column > h1 {color: var(--yellow)}
.footer-column > h2, .footer-column > a {color: var(--white)}
.footer-column {width: 25%; box-sizing: border-box}
.footer-logo {width: 100px; padding: 50px}

.footer, .website-end {
    z-index: 9999;
    box-sizing: border-box;
}

.website-end {
    background: var(--yellow);
    padding: 0px 100px;
    display: flex;
    justify-content: center;
    text-align: center
}

.website-end a:hover {
    background-color: #000;
    color: var(--yellow);
    text-decoration: none;
}

.link {text-decoration: underline}

@media only screen and (min-width: 1200px) and (max-height: 800px),
       only screen and (min-width: 1400px) and (max-height: 1000px),
       only screen and (min-width: 1600px) and (max-height: 1150px),
       only screen and (min-width: 1800px) and (max-height: 1200px) {
    .container{line-height: 9.375vw}
    .design{padding-left: 2.775vw}
    div.container>h1 {font-size: 12vw}
}

@media only screen and (min-width: 1200px) and (max-height: 700px),
       only screen and (min-width: 1400px) and (max-height: 850px),
       only screen and (min-width: 1600px) and (max-height: 950px),
       only screen and (min-width: 1800px) and (max-height: 1050px) {
    .container{line-height: 7.03125vw}
    .design{padding-left: 2.08125vw}
    div.container>h1 {font-size: 9vw}
}

@media only screen and (min-width: 1200px) and (max-height: 500px),
       only screen and (min-width: 1400px) and (max-height: 550px),
       only screen and (min-width: 1600px) and (max-height: 650px),
       only screen and (min-width: 1800px) and (max-height: 750px) {
    .container{line-height: 4.6875vw}
    .design{padding-left: 1.3875vw}
    div.container>h1 {font-size: 6vw}
}

@media only screen and (max-width: 850px) {
    .footer {
        flex-direction: column;
        padding: 25px;
        gap: 20px}
    .footer-column {width: 100%;}
    .website-end {
        background: var(--yellow);
        padding: 0px 10px 10px 10px;
        display: flex;
        justify-content: center;
    }
    .footer-logo {
        box-sizing: border-box;
        width: 50%;
        padding: 20px;
    }
    .footer h1 {font-size: 16px}
    .footer h2 {font-size: 14px}
}

@media only screen and (max-width: 750px) {
	.hero-grid-right {width:40px}
    .hero-sub {line-height: 3.9vw} 
    div.hero-sub>h1 {font-size: 3.5vw}
}

@media only screen and (max-width: 600px) {
    html {--black: #000;} 
    .nav1 {display: block}
    .topnav {display: none}
    .hero-grid-right {width:40px}
    .container{line-height: 11.25vw}
    .design{padding-left: 3.33vw}
    div.container>h1 {font-size: 14.4vw}

    .hero-grid:hover #logo {opacity: 0}

    .pages {
        flex-direction: column;
        overflow-y: scroll;
        width: 100%;
        overflow-x: hidden;
        height: auto
    }

    .filters {
        overflow-x: scroll;
        height: 47px;
    }

    ::-webkit-scrollbar {
        width: 5px;
        height: 0px
    }
    
    #about {
        width: 100vw;
        flex-direction: column;
        margin-left: auto;
        margin-top: 100vh;
        padding: 0  0 0 20px;
        gap: 0px
    }

    .about-column {
        padding: 50px 50px 50px 70px;
        color: var(--black);
        width: auto;
    }

    .directions-container {
        height: fit-content;
        gap: 50px;
        width: 100%;
        padding: 20px;
        flex-direction: column;
    }

    .directions-content {
        height: fit-content;
    }

    .directions-image {
        margin: auto;
        display: block;
        max-width: 100%;
    }
    
    .directions-text {
        width: 100%;
        display: flex;
        flex-direction: column;
        gap: 10px;
    }

    .students-grid-right {
        margin-top: 0;
        align-self: flex-start;
        flex: 1;
        display: flex;
        flex-wrap: nowrap;
        flex-direction: column;
        width: calc(100% - 75px);
        align-items: center;
    }

    #students-container {padding-top: 20px !important}

    #scroll {
        align-items: right;
        height: fit-content;
        width: auto;}
    
    .pageheader {height: 70px !important}
    .g-l {width: 75px; min-width: 75px; border: none; background: #00000000;}
}
/* ... */

